[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/control/room.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://img/desert_floor.png" type="Texture" id=3]
[ext_resource path="res://img/tower_floor.png" type="Texture" id=4]
[ext_resource path="res://img/mountain_floor.png" type="Texture" id=5]
[ext_resource path="res://img/lava_floor.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

[node name="room" type="Node2D"]
script = ExtResource( 1 )

[node name="NW" type="Node2D" parent="."]

[node name="SE" type="Node2D" parent="."]

[node name="roomArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="roomArea"]
position = Vector2( 512, 320 )
shape = SubResource( 1 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
show_collision = true
collision_use_kinematic = false

[node name="checkRoomClear" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="map" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( 514, -325 )
scale = Vector2( 0.97, 0.95 )

[node name="desert" type="Sprite" parent="map"]
visible = false
texture = ExtResource( 3 )

[node name="tower" type="Sprite" parent="map"]
visible = false
texture = ExtResource( 4 )

[node name="volcano" type="Sprite" parent="map"]
visible = false
position = Vector2( 0.545934, 6.75867 )
scale = Vector2( 2.64768, 2.23327 )
texture = ExtResource( 6 )

[node name="mountain" type="Sprite" parent="map"]
visible = false
texture = ExtResource( 5 )

[connection signal="body_entered" from="roomArea" to="." method="_on_roomArea_body_entered"]
[connection signal="body_exited" from="roomArea" to="." method="_on_roomArea_body_exited"]
[connection signal="timeout" from="checkRoomClear" to="." method="_on_checkRoomClear_timeout"]
